--- a/css/media.css
+++ b/css/media.css
@@ -18,7 +18,7 @@
 
 @media (max-width: 1580px) {
 
-  
+
 
 
 
@@ -72,9 +72,9 @@
     margin-bottom: 107px;
   }
 
-  .gallery__cont-right {
+  /* .gallery__cont-right {
     width: 594px;
-  }
+  } */
 
   .gallery__cont-right .swiper {
     padding-top: 85px;
@@ -109,14 +109,14 @@
 
   .catalog__cont-left {
     width: 100%;
-    padding-top: 303px;
+    /* padding-top: 303px; */
     /* background-repeat: no-repeat; */
     /* background-position: top center; */
   }
 
-  .person-twelve {
+  /* .person-twelve {
     background-image: url("../img/person-photo-12-1024.jpg");
-  }
+  } */
 
   .person-one {
     background-image: url("../img/catalog-one-1024.jpg");
@@ -382,6 +382,10 @@
 
 @media (max-width: 1310px) {
 
+  .gallery__cont-right {
+    width: 594px;
+  }
+
   .container {
     /* max-width: 1024px; */
     /* margin: 0 auto; */
@@ -455,7 +459,7 @@
 
 
 
-  
+
 
 
   .nav__link {
@@ -464,6 +468,7 @@
   }
 
   .nav__list {
+    align-items: flex-start;
     overflow: auto;
     flex-direction: column;
     margin-bottom: 30px;
@@ -603,19 +608,20 @@
 
   .swiper-pagination-bullet:first-child {
     margin-right: 4px !important;
-}
-
-  .choices__list--dropdown,
-.choices__list[aria-expanded] {
-  background-color: black;
-}
-
-  .modal-dialog {
-    max-width: 594px;
-    max-height: 594px;
   }
 
-  .modal-content {
+  .choices__list--dropdown,
+  .choices__list[aria-expanded] {
+    background-color: black;
+  }
+
+  /* .modal-content {
+   
+  } */
+
+  .modal__content {
+    max-width: 594px;
+    max-height: 594px;
     background-image: url("../img/modal-1-1024.jpg");
     background-size: 264px 594px;
     padding: 121px 50px 121px 314px;
@@ -670,8 +676,8 @@
   }
 
   .gallery__cont-right {
-    width: 668px;
-    /* width: 100%; */
+    /* max-width: 668px; */
+    width: 100%;
   }
 
   .gallery__cont-right .swiper {
@@ -710,11 +716,6 @@
 
   .catalog__cont-right {
     margin-bottom: 45px;
-  }
-
-  .catalog__cont-left {
-    background-size: 668px 419px;
-    padding-top: 440px;
   }
 
   .person__date {
@@ -874,15 +875,15 @@
 
 @media (max-width: 767px) {
 
-  .gallery__cont-right {
+  /* .gallery__cont-right {
     max-width: 290px;
-    /* width: 100%; */
+
   }
 
   .gallery__cont {
     align-items: center;
   }
-
+ */
 
 }
 
@@ -890,31 +891,30 @@
 
 @media (max-width: 660px) {
 
-
-
-  .modal-dialog {
-    max-width: 290px;
-    max-height: 600px;
-    margin: 1.75rem auto;
-    z-index: 5;
+  .modal__btn-close {
+    top: 15px;
+    right: 15px;
+    background-image: url('../img/btn-close-modal-320.svg');
   }
 
-  .modal-content {
+  .modal__content {
+    max-width: 290px;
+    max-height: 600px;
     background-image: url("../img/modal-1-320.jpg");
     background-position: top center;
     background-size: 290px 200px;
     padding: 217px 21px 100px 21px;
-    max-height: initial;
+
   }
 
-  .modal-dialog-centered {
-    /* min-height: calc(100% - 3.5rem); */
+  /* .modal-dialog-centered {
+    min-height: calc(100% - 3.5rem);
     min-height: 78%;
-  }
+  } */
 
-  .modal-content.cont {
+  /* .modal-content.cont {
     min-height: max-content;
-  }
+  } */
 
 
 
@@ -1053,7 +1053,7 @@
   .gallery__cont-right .swiper {
     height: 414px;
     /* width: 100%; */
-    max-width: 290px;
+    /* max-width: 290px; */
   }
 
   .gallery__cont-left {
@@ -1089,17 +1089,20 @@
   }
 
   .gallery__cont-right .swiper-button-next {
+    /* left: 180px; */
+    left: calc(50% + 35px);
     top: 409px;
-    left: 180px;
   }
 
   .gallery__cont-right .swiper-button-prev {
+    /* left: 80px; */
+    left: calc(50% - 65px);
     top: 409px;
-    left: 80px;
   }
 
   .gallery__cont-right .swiper-pagination-fraction {
-    left: 130px;
+    /* left: 130px; */
+    left: calc(50% - 15px);
     top: 387px;
   }
 
@@ -1126,7 +1129,7 @@
 
 
 
-  .gallery__cont-right .swiper-slide-1 {
+  /* .gallery__cont-right .swiper-slide-1 {
     background-image: url("../img/gallery-swiper-1-320.jpg");
   }
 
@@ -1169,7 +1172,7 @@
   .gallery__cont-right .swiper-slide-5:active {
     background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url("../img/gallery-swiper-5-320.jpg");
     outline: 3px solid #7943A4;
-  }
+  } */
 
   /* .gallery__cont-right .swiper-slide-6 {
     background-image: url("../img/gallery-swiper-6-320.jpg");
@@ -1206,7 +1209,7 @@
   }
 
   .catalog__cont-left {
-    background-size: 290px 181px;
+    /* background-size: 290px 181px; */
     padding-top: 201px;
   }
 
@@ -1432,11 +1435,31 @@
 
 
 
+}
 
 
 
+@media (max-width: 500px) {
 
+  .gallery__cont-right .swiper {
+    height: 414px;
+    /* width: 100%; */
+    max-width: 290px;
+  }
 
+  .gallery__cont-right .swiper-pagination-fraction {
+    left: 130px;
+    top: 387px;
+  }
 
+  .gallery__cont-right .swiper-button-prev {
+    top: 409px;
+    left: 80px;
+  }
+
+  .gallery__cont-right .swiper-button-next {
+    top: 409px;
+    left: 180px;
+  }
 
 }
