--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body {
   justify-content: space-between;
   width: 100%;
   max-width: 756px;
-  
+
   margin-right: 50px;
 }
 
@@ -507,7 +507,7 @@ body {
 
 .dropdown__item-1-1 {
   background-image: url("../img/select-header-1.1.jpg");
-  
+
 
 }
 
@@ -523,7 +523,7 @@ body {
   opacity: 0;
   background-color: rgba(194, 131, 243, 0.4);
   transition: opacity 0.2s ease-in-out;
-  
+
 }
 
 .dropdown__btn:active::after {
@@ -609,6 +609,7 @@ body {
 .dropdown__item-2-3 {
   background-image: url("../img/select-header-2.3.jpg");
 }
+
 /* 
 .dropdown__btn.dropdown__item-2-3 {
   
@@ -701,6 +702,7 @@ body {
 .dropdown__item-4-1 {
   background-image: url("../img/select-header-4.1.jpg");
 }
+
 /* 
 .dropdown__btn.dropdown__item-4-1 {
   
@@ -732,6 +734,7 @@ body {
 .dropdown__item-4-3 {
   background-image: url("../img/select-header-4.3.jpg");
 }
+
 /* 
 .dropdown__btn.dropdown__item-4-3 {
   
@@ -812,6 +815,7 @@ body {
 .dropdown__item-5-4 {
   background-image: url("../img/select-header-5.4.jpg");
 }
+
 /* 
 .dropdown__btn.dropdown__item-5-4 {
   
@@ -997,7 +1001,7 @@ body {
   /* margin: -3px; */
   background-color: #7943A4;
   outline-offset: -3px;
-  
+
   outline: 3px solid #D1A9F0;
   color: var(--white-color);
 }
@@ -1328,16 +1332,34 @@ body {
 }
 
 
+.gallery__img {
+  width: 100%;
+  height: 100%;
+}
+
+/* .gallery__cont-right .swiper-slide-btn picture {
+  height: 100%;
+} */
+
 
 .gallery__cont-right .swiper-slide-btn {
-  background-position: center center;
+  /* background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   align-items: flex-end;
   width: 100%;
   height: 100%;
-
   cursor: pointer;
+
+  transition: outline 0.3s ease-in-out, outline-offset 0.3s ease-in-out, background-image 0.9s ease-in-out;
+
+}
+
+.gallery__cont-right .swiper-slide-btn:active {
+  outline: 3px solid #7943A4;
+  outline-offset: -3px;
+
+
 }
 
 .gallery__cont-right .swiper-slide-btn:focus-visible {
@@ -1383,13 +1405,14 @@ body {
   left: 0;
 
   background-color: rgba(194, 131, 243, 0.4);
-  
+
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
+
 /*  */
 .gallery__cont-right .swiper-slide-btn:active::before {
- 
+
   opacity: 1;
 }
 
@@ -1422,10 +1445,7 @@ body {
   transition: background-color 0.2s ease-in-out, border 0.2s ease-in-out;
 }
 
-.gallery__cont-right .swiper-button-next::after {
-  /* transform: rotate(45deg);
-  left: 8px; */
-}
+
 
 .gallery__cont-right .swiper-button-next:hover,
 .gallery__cont-right .swiper-button-prev:hover {
@@ -1436,13 +1456,13 @@ body {
 .gallery__cont-right .swiper-button-prev:active {
   background-color: #7943A4;
   border: 2px solid #000000;
-  
+
 }
 
 .gallery__cont-right .swiper-button-next:focus-visible,
 .gallery__cont-right .swiper-button-prev:focus-visible {
   border: 2px solid #000000;
-  
+
 }
 
 
@@ -1499,99 +1519,35 @@ body {
 
 
 
-.gallery__cont-right .swiper-slide-1 {
+/* .gallery__cont-right .swiper-slide-1 {
   background-image: url("../img/gallery-swiper-1.jpg");
-  transition: outline 0.3s ease-in-out, outline-offset 0.3s ease-in-out, background-image 0.9s ease-in-out;
+} */
 
-}
-
-.gallery__cont-right .swiper-slide-1:active {
-  /* background-image: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url("../img/gallery-swiper-1.jpg"); */
-  outline: 3px solid #7943A4;
-  outline-offset: -3px;
-  /* background-position: center center; */
-  /* background-size: cover; */
-}
-
-.gallery__cont-right .swiper-slide-2 {
+/* .gallery__cont-right .swiper-slide-2 {
   background-image: url("../img/gallery-swiper-2.jpg");
-  transition: outline 0.3s ease-in-out, outline-offset 0.3s ease-in-out, background-image 0.9s ease-in-out;
-
-}
-
-.gallery__cont-right .swiper-slide-2:active {
-  /* background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url("../img/gallery-swiper-2.jpg"); */ 
-  outline: 3px solid #7943A4;
-  outline-offset: -3px;
-  /* background-position: center center; */
-
-  /* background-size: cover; */
 
 }
 
 .gallery__cont-right .swiper-slide-3 {
   background-image: url("../img/gallery-swiper-3.jpg");
-  transition: outline 0.3s ease-in-out, outline-offset 0.3s ease-in-out, background-image 0.9s ease-in-out;
-
-}
-
-.gallery__cont-right .swiper-slide-3:active {
-  /* background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url("../img/gallery-swiper-3.jpg"); */
-  outline: 3px solid #7943A4;
-  outline-offset: -3px;
-  /* background-position: center center; */
-
-  /* background-size: cover; */
 
 }
 
 .gallery__cont-right .swiper-slide-4 {
   background-image: url("../img/gallery-swiper-4.jpg");
-  transition: outline 0.3s ease-in-out, outline-offset 0.3s ease-in-out, background-image 0.9s ease-in-out;
-
-}
-
-.gallery__cont-right .swiper-slide-4:active {
-  /* background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url("../img/gallery-swiper-4.jpg"); */
-  outline: 3px solid #7943A4;
-  outline-offset: -3px;
-  /* background-position: center center; */
-
-  /* background-size: cover; */
 
 }
 
 .gallery__cont-right .swiper-slide-5 {
   background-image: url("../img/gallery-swiper-5.jpg");
-  transition: outline 0.3s ease-in-out, outline-offset 0.3s ease-in-out, background-image 0.9s ease-in-out;
-
-}
-
-.gallery__cont-right .swiper-slide-5:active {
-  /* background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url("../img/gallery-swiper-5.jpg"); */
-  outline: 3px solid #7943A4;
-  outline-offset: -3px;
-  /* background-position: center center; */
-
-  /* background-size: cover; */
 
 }
 
 .gallery__cont-right .swiper-slide-6 {
   background-image: url("../img/gallery-swiper-6.jpg");
-  transition: outline 0.3s ease-in-out, outline-offset 0.3s ease-in-out, background-image 0.9s ease-in-out;
 
-}
+} */
 
-.gallery__cont-right .swiper-slide-6:active {
-  /* background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url("../img/gallery-swiper-6.jpg"); */
-  outline: 3px solid #7943A4;
-  outline-offset: -3px;
-  /* background-position: center center; */
-
-  /* background-size: cover; */
-
-}
 
 
 
@@ -1616,16 +1572,20 @@ body {
 
 .catalog__cont-left {
   width: 100%;
-  padding-top: 500px;
-  background-repeat: no-repeat;
-  background-position: top center;
+  /* padding-top: 500px; */
+  /* background-repeat: no-repeat;
+  background-position: top center; */
 }
 
-.person-twelve {
+.person__photo {
+  margin-bottom: 30px;
+}
+
+/* .person-twelve {
   background-image: url("../img/person-photo-12.jpg");
-}
+} */
 
-.person-one {
+/* .person-one {
   background-image: url("../img/catalog-one.jpg");
 }
 
@@ -1643,7 +1603,7 @@ body {
 
 .person-empty {
   background-image: url("../img/catalog-empty.jpg");
-}
+} */
 
 .catalog__cont-right {
   width: 50%;
@@ -1669,7 +1629,7 @@ body {
 
 .tabs-nav__btn a {
   outline: none;
-  
+
 }
 
 .empty__link {
@@ -2074,8 +2034,7 @@ a:hover {
   position: absolute;
   top: 46%;
   z-index: 1;
-  transition: outline 0.2s ease-in-out, outline-offset 0.2s ease-in-out, background-color 0.2s ease-in-out
-
+  transition: outline 0.2s ease-in-out, outline-offset 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 
 .events .swiper-button-next-events:hover,
@@ -2096,7 +2055,7 @@ a:hover {
   background-color: #D1A9F0;
   outline: 2px solid #9D5CD0;
   outline-offset: -2px;
-  
+
 }
 
 .events .swiper-button-next-events::after,
@@ -2120,9 +2079,7 @@ a:hover {
 
 }
 
-.events .swiper-button-next-events::after {
-  /* transform: rotate(45deg); */
-}
+
 
 .events .swiper-button-prev-events::after {
   transform: rotate(-180deg);
@@ -2472,17 +2429,6 @@ a:hover {
   width: 100%;
   height: 100%;
   transition: background-image 0.2s ease-in-out;
-  /* left: 11px; */
-  /* top: calc(50% - 4px); */
-  /* width: 7px;
-  height: 7px;
-  border-top: 1px solid #000;
-  border-right: 1px solid #000; */
-
-}
-
-.projects .swiper-button-next-unique::after {
-  /* transform: rotate(45deg); */
 }
 
 .projects .swiper-button-prev-unique::after {
@@ -2742,45 +2688,67 @@ a:hover {
 
 /* modal */
 
-.modal-header {
+/* .modal-header {
   border: none;
+} */
+
+.modal__container {
+  margin: auto;
+  /* display: flex; */
 }
 
-.modal-dialog {
+
+.modal__body {
+  display: none;
+  flex-direction: row;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+}
+
+.modal__btn-close {
+  position: absolute;
+  /* z-index: 10000; */
+  width: 22px;
+  height: 22px;
+  top: 36px;
+  right: 36px;
+  background-image: url('../img/btn-close-modal.svg');
+  background-repeat: no-repeat;
+  /* background-size: 100%; */
+
+}
+
+.is-open.modal__body {
+  display: flex;
+
+}
+
+
+
+.modal__content {
+  display: flex;
+
+  flex-direction: column;
+  background-color: var(--white-color);
   max-width: 900px;
   max-height: 500px;
-
-}
-
-
-.modal-body {
-  flex-direction: row;
-  position: static;
-}
-
-.btn-close {
-  z-index: 2;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-
-.modal-content.cont {
-  min-height: 145vh;
-}
-
-.modal-content {
+  /* margin: auto; */
   background-image: url("../img/modal-1.jpg");
   background-repeat: no-repeat;
   background-position: center left;
   /* background-size: cover; */
-  position: absolute;
-  top: 0;
+  position: relative;
+  /* top: 0;
   left: 0;
   bottom: 0;
-  right: 0;
+  right: 0; */
   padding: 121px 50px 121px 448px;
-  min-height: fit-content;
+  /* min-height: fit-content; */
 }
 
 
@@ -2826,4 +2794,5 @@ a:hover {
 
 .invisible-title {
   visibility: hidden;
+  display: none;
 }
